kubernetes/definitive_versions/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  type: NodePort
  ports:
    - port: 80
    - nodePort: 80
  selector:
    app: "frontend"
    role: "frontend"
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: frontend
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
  labels:
    environment : dev
    app: frontend
spec:
  hostname: frontend
  containers:
  - image: frontend
    name: frontend
    imagePullPolicy: Never
    ports:
    - containerPort: 80
    resources: {}
  restartPolicy: OnFailure
status: {}
