kubernetes/definitive_versions/moviedb.yaml
apiVersion: v1
kind: Service
metadata:
  name: moviedb
  labels:
    app: moviedb
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    app: moviedb
