kubernetes/definitive_versions/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  ports:
  - port: 3306
  selector:
    app: mysqldb
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysqldb
spec:
  selector:
    matchLabels:
      app: mysqldb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
      - image: mysqldb #locally at the moment
        imagePullPolicy: Never
        name: mysqldb
        env:  #is done in dockerfile
          # Use secret in real usage
        - name: MYSQL_ROOT_PASSWORD
          value: ThePassword
        ports:
        - containerPort: 3306
          name: mysqldb
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
